# relational-engine

./: .gitignore  CMakeLists.txt  README.org  client.el  dune-project  flake.nix
.github/workflows/: build.yml
lib/: core_functions.ml  disk.ml  dune  extensions.ml  hello.ml  interop.ml  merklecpp_functions.ml  merklecpp_stubs.cpp  planner.ml  protocol.ml  relation.ml  schema.ml  server.ml  sha256.ml  transaction.ml
shared/librelational_engine/: CMakeLists.txt  library.cpp  library.h
test/: dune  test_relational_engine.ml
