(library
 (name relational_engine)
 (libraries ctypes ctypes-foreign)
 ;; (c_library_flags -lssl -lcrypto -L %{env:LIBRESSL_LIB_PATH=})
 ;; (foreign_stubs
 ;;  (language cxx)
 ;;  (names merklecpp_stubs)
 ;;  (flags
 ;;   (:standard -lssl -lcrypto)
 ;;   (-L %{env:LIBRESSL_LIB_PATH=})
 ;;   (-I %{env:LIBRESSL_INCLUDE_PATH=})
 ;;   (-I %{env:MERKLECPP_INCLUDE_PATH=})))
 
 (ctypes
  (external_library_name merklecpp_stub)
  (headers (include "/Users/mmagueta/CLionProjects/merklecpp_stub/library.h"))
  (build_flags_resolver
   (vendored
    (c_flags
     -L %{env:MERKLECPP_LIB_PATH=})))
  (type_description
   (instance Types)
   (functor merklecpp_types))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor merklecpp_functions))
  (generated_types Types_generated)
  (generated_entry_point C)))
